infrastructure/rendered.yaml
---
# Source: retail-store-sample-checkout-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout-retail-store-sample-checkout-chart
  labels:
    app.kubernetes.io/name: retail-store-sample-checkout-chart
    helm.sh/chart: retail-store-sample-checkout-chart-1.2.2
    app.kubernetes.io/instance: checkout
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: retail-store-sample-checkout-chart
    app.kubernetes.io/instance: checkout
---
# Source: retail-store-sample-checkout-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-retail-store-sample-checkout-chart
  labels:
    app.kubernetes.io/name: retail-store-sample-checkout-chart
    helm.sh/chart: retail-store-sample-checkout-chart-1.2.2
    app.kubernetes.io/instance: checkout
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: retail-store-sample-checkout-chart
      app.kubernetes.io/instance: checkout
  template:
    metadata:
      labels:
        app.kubernetes.io/name: retail-store-sample-checkout-chart
        app.kubernetes.io/instance: checkout
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: retail-store-sample-checkout-chart
          image: "630019796862.dkr.ecr.eu-central-1.amazonaws.com/ravid-retail-store-checkout:latest"
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          # livenessProbe:
          #   httpGet:
          #     path: 
          #     port: 8080
          #   initialDelaySeconds: 
          #   periodSeconds: 
          
          # readinessProbe:
          #   httpGet:
          #     path: 
          #     port: 8080
          #   initialDelaySeconds: 
          #   periodSeconds: 
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
